--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
             ><img class="icon" src="images/ico/whatsapp.svg" alt="" />Call
             Centre</a
           ><br />
+          <a
+            class="button button-partner"
+            href="https://dutasarana.com/mitra"
+            target="_blank"
+            rel="noopener"
+            role="button"
+            ><img class="icon" src="images/ico/partner.png" alt="" />Kerjasama Mitra</a
+          ><br />
 
           <br />
           <p style="font-size: small">©2024 Duta Sarana Computer</p>
