--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/skeleton-auto.css" />
-    <link rel="stylesheet" href="css/brands.css" />
+    <link rel="stylesheet" href="css/brands.css?v=10" />
     <link rel="icon" type="image/svg" href="images/ico/web.svg" />
   </head>
   <body>
